--- a/_posts/2019-01-09-swagger.md
+++ b/_posts/2019-01-09-swagger.md
@@ -30,6 +30,20 @@ tag: SpringBoot
 ## Configuration
 SWaggerConfig.java
 ```
+import io.swagger.annotations.Api;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import springfox.documentation.builders.PathSelectors;
+import springfox.documentation.builders.RequestHandlerSelectors;
+import springfox.documentation.service.ApiInfo;
+import springfox.documentation.service.Contact;
+import springfox.documentation.spi.DocumentationType;
+import springfox.documentation.spring.web.plugins.Docket;
+import springfox.documentation.swagger2.annotations.EnableSwagger2;
+
+import java.util.ArrayList;
+
 @Configuration
 @EnableSwagger2
 @ConditionalOnProperty(prefix="swagger", name="enabled", havingValue = "true")
@@ -56,3 +70,8 @@ application.properties
 ```
 swagger.enabled=true
 ```
+
+## /swagger-ui.html
+http://localhost:8080/swagger-ui.html
+
+![swagger]({{site.url}}/assets/images/2019-01/swagger-01.jpg)  
