--- a/_posts/2019-01-09-swagger.md
+++ b/_posts/2019-01-09-swagger.md
@@ -34,6 +34,7 @@ import io.swagger.annotations.Api;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.ApiInfo;
@@ -41,8 +42,6 @@ import springfox.documentation.service.Contact;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
-
-import java.util.ArrayList;
 
 @Configuration
 @EnableSwagger2
@@ -60,8 +59,15 @@ public class SwaggerConfig {
   }
 
   private ApiInfo appInfo() {
-    return new ApiInfo("TODO App API", "Api Documentation", "0.0.1", "urn:tos", new Contact("", "", ""),
-        "Apache 2.0", "http://www.apache.org/licenses/LICENSE-2.0", new ArrayList());
+    return new ApiInfoBuilder()
+        .title("TODO App API")
+        .description("Api Documentation")
+        .version("0.0.1")
+        .termsOfServiceUrl("urn:tos")
+        .contact(new Contact("", "", ""))
+        .license("Apache 2.0")
+        .licenseUrl("http://www.apache.org/licenses/LICENSE-2.0")
+        .build();
   }
 }
 ```
