--- a/_posts/2019-01-09-swagger.md
+++ b/_posts/2019-01-09-swagger.md
@@ -76,7 +76,13 @@ application.properties
 ```
 swagger.enabled=true
 ```
+  
+SecurityConfig.java
+```
+    web.ignoring().antMatchers("/swagger-ui.html", "/swagger-ui.html/**", "/swagger-resources/**", "/v2/api-docs/**")
 
+```
+  
 ## /swagger-ui.html
 http://localhost:8080/swagger-ui.html
 
